<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="text_match">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz_.</string>
    <string name="app_name">CEPM360</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">欢迎</string>
    <string name="share_to">分享到</string>
    <string name="share">共享</string>
    <string name="mount">挂载</string>
    <string name="no_receiver_component">没有接收的组件</string>
    <string name="folder">目录</string>
    <string name="back">返回</string>
    <string name="common">常用</string>
    <string name="save">保存</string>
    <string name="save_succ">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="upload">上传</string>
    <string name="upload_succ">上传成功</string>
    <string name="upload_fail">保存失败</string>
    <string name="reset">重置</string>
    <string name="searching">查询</string>
    <string name="open">打开</string>
    <string name="new_create">新建</string>
    <string name="new_add">新增</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="send">发送</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="prompt">提示</string>
    <string name="all">所有</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="insert">插入</string>
    <string name="attachment">附件</string>
    <string name="record">往来记录</string>
    <string name="no_fun">暂无此功能</string>
    <string name="exit_msg">是否退出程序</string>
    <string name="exit_login">退出登陆</string>
    <string name="logoff">注销用户</string>
    <string name="remind">提醒</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="enable">启用</string>
    <string name="close">关闭</string>
    <string name="clear">清除</string>
    <string name="previous">上一步</string>
    <string name="next">下一步</string>
    <string name="finish">完成</string>
    <string name="index">序号</string>
    <string name="title">标题</string>
    <string name="type">类型</string>
    <string name="size">大小</string>
    <string name="time">时间</string>
    <string name="date">日期</string>
    <string name="coin">货币</string>
    <string name="mark">说明</string>
    <string name="percent">%</string>
    <string name="my_info">我的信息</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="birth">出生年月</string>
    <string name="office_phone">办公电话</string>
    <string name="mobile">手机</string>
    <string name="email">电子邮件</string>
    <string name="email_pwd">邮件密码</string>
    <string name="QQ_account">QQ号码</string>
    <string name="login_name">用户:</string>
    <string name="login_name_1">登陆名</string>
    <string name="password">密码:</string>
    <string name="login">登录</string>
    <string name="remember_pwd">记住密码</string>
    <string name="help_pwd">忘记密码</string>
    <string name="input_account_password">请先输入账号密码</string>
    <string name="input_account_name">请输入手机号码</string>
    <string name="input_password">请输入密码</string>
    <string name="pwd_update_title">修改密码</string>
    <string name="pwd_update_input1">输入新密码</string>
    <string name="pwd_update_input2">验证新密码</string>
    <string name="personal_login_name">用户名</string>
    <string name="personal_name">姓名</string>
    <string name="personal_pwd">密码</string>
    <string name="modify_personal_pwd">修改登录密码</string>
    <string name="personal_obs_name">部门</string>
    <string name="allocation_epartment">分配部门</string>
    <string name="obs_classification">组织架构</string>
    <string name="contact_info">联系方式</string>
    <string name="home_phone">家庭电话</string>
    <string name="home_address">家庭地址</string>
    <string name="score_range">分数范围</string>
    <string name="confirm_delete">确认删除？</string>
    <string name="confirm_submit">确认提交？</string>
    <string name="searching_keyword">关键字</string>
    <string name="new_version_found">发现新版本:</string>
    <string name="document_cannot_open">没有找到相应的应用程序打开此文件</string>
    <string name="tree_list_cannot_multi_select">树列表不能进入多选模式</string>
    <string name="select_time">选择日期</string>
    <string name="set_time">设置日期</string>
    <string name="name">名称</string>
    <string name="code">编号</string>
    <string name="status">状态</string>
    <string name="other">其他</string>
    <string name="address">地址</string>
    <string name="company">单位</string>
    <string name="company_1">公司</string>
    <string name="contacts">联系人</string>
    <string name="contact_number">联系电话</string>
    <string name="content">内容</string>
    <string name="measure">措施</string>
    <string name="happen_date">发生日期</string>
    <string name="good_name">商品名称</string>
    <string name="spec">规格</string>
    <string name="category">类别</string>
    <string name="kind">种类</string>
    <string name="brand">品牌</string>
    <string name="model">型号</string>
    <string name="unit">单位</string>
    <string name="quantity">数量</string>
    <string name="price">单价</string>
    <string name="amount">金额</string>
    <string name="job_type">工种</string>
    <string name="supplier">供应商</string>
    <string name="arrival_time">到货时间</string>
    <string name="approach_time">进场时间</string>
    <string name="exit_time">撤出时间</string>
    <string name="time_interval">时间间隔</string>
    <string name="construction_team">施工队</string>
    <string name="general">常    用</string>
    <string name="role">角色</string>
    <string name="start_time">开始时间</string>
    <string name="finish_time">完成时间</string>
    <string name="start_date">开始日期</string>
    <string name="finish_date">结束日期</string>
    <string name="not_start">未开始</string>
    <string name="ongoing">进行中</string>
    <string name="finished">已完成</string>
    <string name="untreated">未处理</string>
    <string name="processed">已处理</string>
    <string name="add_success">添加成功</string>
    <string name="delete_success">删除成功</string>
    <string name="update_success">更新成功</string>
    <string name="adminstrator">管理员</string>
    <string name="check_for_update">检查更新</string>
    <string name="current_version">当前版本</string>
    <string name="latest_version">当前是最新版本</string>
    <string name="about_cepm360">关于CEPM360</string>
    <string name="date_dictionary">数据字典</string>
    <string name="type_dictionary">数据字典类型</string>
    <string name="dictionary_is_null">字典代码和名称为空，请重新输入!</string>
    <string name="task_not_exist">项目或任务不存在</string>
    <string name="loading">正在加载</string>
    <string name="no_ext_storage">无外部存储设备</string>
    <string name="no_found_any_picture">未找到任何图片</string>
    <string name="picture_unit">张</string>
    <string name="preview_some_pictures">预览 <xliff:g id="number">%1$s</xliff:g>张</string>
    <string name="attachment_rename">附件重命名</string>
    <string name="attachment_rename_null">命名为空</string>
    <string name="file_null_or_path_error">文件不存在或路径错误</string>
    <string name="todo_list">待办事项</string>
    <string name="my_todo_list">我的待办</string>
    <string name="my_task">我的任务</string>
    <string name="image_progress">形象进展</string>
    <string name="latest_feedback">最新反馈</string>
    <string name="announcement">公告</string>
    <string name="company_announcement">公司公告</string>
    <string name="latest_document">最新文档</string>
    <string name="no_zh_group_id">查询不到对应的项目节点</string>
    <string name="work_task">作业任务</string>
    <string name="file_type">文件类型</string>
    <string name="capture_time">拍摄时间</string>
    <string name="node_name">节点名称</string>
    <string name="publish_owner">发布人</string>
    <string name="publish_time">发布时间</string>
    <string name="started_or_stopped_time">起止时间</string>
    <string name="delay">延期</string>
    <string name="expire_today">今日到期</string>
    <string name="expire_this_week">本周到期</string>
    <string name="expire_this_month">本月到期</string>
    <string name="change_approval">签证-审批</string>
    <string name="subcontract_payment_approval">分包合同付款-审批</string>
    <string name="purchase_contract_payment_approval">采购合同付款-审批</string>
    <string name="purchase_plan_approval">采购计划-审批</string>
    <string name="purchase_arrival_1">采购到货</string>
    <string name="employee_loan_approval">员工借款-审批</string>
    <string name="outsource_artificial_approval">外包人工单-审批</string>
    <string name="contract_payment_approval">总包合同付款-审批</string>
    <string name="purchase_plan_countersignl">采购计划-会签</string>
    <string name="subcontract_payment_countersignl">分包合同付款-会签</string>
    <string name="purchase_contract_payment_countersignl">采购合同付款-会签</string>
    <string name="contract_payment_countersignl">合同付款会签</string>
    <string name="contract_change_approval">合同变更审批</string>
    <string name="contract_change_countersignl">合同变更会签</string>
    <string name="plan_publish_1">计划发布</string>
    <string name="task_publish">任务发布</string>
    <string name="progress_feedback">进度反馈</string>
    <string name="image_result">形象成果</string>
    <string name="email_attachment">邮件附件</string>
    <string name="project_directory">项目目录</string>
    <string name="hotline_counseling">客服电话\n4000 651 360</string>
    <string name="user_agreement">用户协议</string>
    <string name="following_weibo">关注微博</string>
    <string name="copyright">Copyright@2009~2015 PM360. All Rights Reserved</string>
    <string name="all_files">全部文件</string>
    <string name="project_files">项目文件</string>
    <string name="device_storage">设备内存</string>
    <string name="ext_otg_storage">外部USB设备</string>
    <string name="all_pictures">所有图片</string>
    <string name="preview_0_pic">预览0张</string>
    <string name="upgrade_later">以后再说</string>
    <string name="upgrade_now">更新</string>
    <string name="input_title_hint">请输入标题</string>
    <string name="link_address">链接地址</string>
    <string name="attachment_folder">附件目录</string>
    <string name="sample_photo">4723张</string>
    <string name="your_location">您所在位置:</string>
    <string name="longitude">经度:</string>
    <string name="latitude">纬度:</string>
    <string name="sign_location">打卡地点:</string>
    <string name="sign_time">打卡时间:</string>
    <string name="add_agency">增加机构</string>
    <string name="select_section">选择责任部门</string>
    <string name="add_project">增加计划</string>
    <string name="select_position">选择部位</string>
    <string name="milestone">里程碑</string>
    <string name="task_statistics">任务统计</string>
    <string name="test_module">测试模块</string>
    <string name="end_time">结束时间</string>
    <string name="purchase_list">可采购商品列表</string>
    <string name="project">项目</string>
    <string name="lease_order">+添加租赁单</string>
    <string name="select_document_path">选择文档路径</string>
    <string name="updated_daily">每日更新</string>
    <string name="total_value">总价</string>
    <string name="version_depiction">版本描述</string>
    <string name="modifier">修改者</string>
    <string name="purchase_count">采购数量</string>
    <string name="modify_date">修改日期</string>
    <string name="version_code">版本号</string>
    <string name="now_registration">今日考勤</string>
    <string name="registration_log">考勤记录</string>
    <string name="start_work_registration">上班打卡</string>
    <string name="gohome_registration">下班打卡</string>
    <string name="my_location_info">我的位置</string>
    <string name="normal_map">普通地图</string>
    <string name="contract_name">合同名称</string>
    <string name="contract_total">合同金额</string>
    <string name="contract_pay_type">支付形式</string>
    <string name="contract_sign_date">签订日期</string>
    <string name="contract_party_B_company">乙方单位</string>
    <string name="contract_signatories">签署人</string>
    <string name="file_info_canread">Readable:</string>
    <string name="file_info_canwrite">Writable:</string>
    <string name="file_info_ishidden">Hidden:</string>
    <string name="file_info_location">Path:</string>
    <string name="file_info_modified">Modified:</string>
    <string name="file_info_size">Size:</string>
</resources>