<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp300_w"
    android:layout_height="wrap_content">
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/file_info_location"
                android:padding="@dimen/dp3_w"
                android:gravity="right"
                style="?android:attr/textAppearanceMedium" />
            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:padding="@dimen/dp3_w">
                <TextView
                    android:id="@+id/information_location"
                    style="?android:attr/textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </HorizontalScrollView>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/file_info_size"
                android:padding="@dimen/dp3_w"
                android:gravity="right"
                style="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/information_size"
                android:padding="@dimen/dp3_w"
                style="?android:attr/textAppearanceSmall" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/file_info_modified"
                android:padding="@dimen/dp3_w"
                android:gravity="right"
                style="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/information_modified"
                android:padding="@dimen/dp3_w"
                style="?android:attr/textAppearanceSmall" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/file_info_canread"
                android:padding="@dimen/dp3_w"
                android:gravity="right"
                style="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/information_canread"
                android:padding="@dimen/dp3_w"
                style="?android:attr/textAppearanceSmall" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/file_info_canwrite"
                android:padding="@dimen/dp3_w"
                android:gravity="right"
                style="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/information_canwrite"
                android:padding="@dimen/dp3_w"
                style="?android:attr/textAppearanceSmall" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/file_info_ishidden"
                android:padding="@dimen/dp3_w"
                android:gravity="right"
                style="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/information_ishidden"
                android:padding="@dimen/dp3_w"
                style="?android:attr/textAppearanceSmall" />
        </TableRow>
    </TableLayout>
</ScrollView>
