<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/table_height"
    android:background="@color/task_home_list_title"
    android:layout_gravity="center_vertical"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/product_name"
        android:layout_width="@dimen/dp130_w"
        android:layout_height="match_parent"
        android:text="@string/good_name"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/table_content_textsize"/>

    <View
        android:layout_width="@dimen/dp1_w"
        android:layout_height="match_parent"
        android:background="@color/divider"
        android:visibility="visible" />

    <com.pm360.cepm360.app.common.view.CHScrollView
        android:id="@+id/item_chscroll_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:tag="CHScrollView" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >
            
            <TextView
                android:id="@+id/format"
                android:layout_width="@dimen/dp100_w"
                android:layout_height="match_parent"
		        android:gravity="center"
                android:text="@string/spec"
                android:textColor="@android:color/black"
                android:textSize="@dimen/table_content_textsize"/>
		
		    <View
		        android:layout_width="@dimen/dp1_w"
		        android:layout_height="match_parent"
		        android:background="@color/divider"
		        android:visibility="visible" />

            <TextView
                android:id="@+id/kind"
                android:layout_width="@dimen/dp100_w"
                android:layout_height="match_parent"
		        android:gravity="center"
                android:text="@string/kind"
                android:textColor="@android:color/black"
                android:textSize="@dimen/table_content_textsize"/>

            <View
		        android:layout_width="@dimen/dp1_w"
		        android:layout_height="match_parent"
		        android:background="@color/divider"
		        android:visibility="visible" />

            <TextView
                android:id="@+id/unit"
                android:layout_width="@dimen/dp100_w"
                android:layout_height="match_parent"
		        android:gravity="center"
                android:text="@string/unit"
                android:textColor="@android:color/black"
                android:textSize="@dimen/table_content_textsize"/>

            <View
		        android:layout_width="@dimen/dp1_w"
		        android:layout_height="match_parent"
		        android:background="@color/divider"
		        android:visibility="visible" />
            
            <TextView
                android:id="@+id/inventory_number"
                android:layout_width="@dimen/dp100_w"
                android:layout_height="match_parent"
		        android:gravity="center"
                android:text="@string/purchase_count"
                android:textColor="@android:color/black"
                android:textSize="@dimen/table_content_textsize"/>
            
            <View
		        android:layout_width="@dimen/dp1_w"
		        android:layout_height="match_parent"
		        android:background="@color/divider"
		        android:visibility="visible" />
            
            <TextView
                android:id="@+id/unit_price"
                android:layout_width="@dimen/dp100_w"
                android:layout_height="match_parent"
		        android:gravity="center"
                android:text="@string/price"
                android:textColor="@android:color/black"
                android:textSize="@dimen/table_content_textsize"/>
            
            <View
		        android:layout_width="@dimen/dp1_w"
		        android:layout_height="match_parent"
		        android:background="@color/divider"
		        android:visibility="visible" />
            
            <TextView
                android:id="@+id/total_price"
                android:layout_width="@dimen/dp100_w"
                android:layout_height="match_parent"
		        android:gravity="center"
                android:text="@string/total_value"
                android:textColor="@android:color/black"
                android:textSize="@dimen/table_content_textsize"/>
                
            <View
		        android:layout_width="@dimen/dp1_w"
		        android:layout_height="match_parent"
		        android:background="@color/divider"
		        android:visibility="visible" />
  
           <TextView
	            android:id="@+id/supplier"
	            android:layout_width="@dimen/dp200_w"
	            android:layout_height="match_parent"
				android:gravity="center"
	            android:text="@string/supplier"
	            android:textColor="@android:color/black"
	            android:textSize="@dimen/table_content_textsize"/>

        </LinearLayout>
    </com.pm360.cepm360.app.common.view.CHScrollView>

</LinearLayout>
